# Instant_API

./: LICENSE  README.md  mt5_check_main.py  pyproject.toml
.claude/projects/C--Users-Riri/memory/: MEMORY.md  trading-recovery-protocol.md
docs/: README.md  summary.md
instantapi/: __init__.py  __main__.py  cli.py  config.py
instantapi/ai/: detector.py  providers.py  schema.py
instantapi/api/: exporter.py  generator.py  server.py
instantapi/dashboard/: __init__.py  app.py
instantapi/scraper/: browser.py  extractor.py
instantapi/storage/: db.py
tests/: test_instantapi.py
