[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instantapi"
version = "0.1.0"
description = "Turn any website into a REST API in 30 seconds"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Riri", email = "riri@instantapi.dev" },
]
keywords = ["api", "scraper", "ai", "llm", "fastapi", "web-scraping", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.45.0",
    "litellm>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/gacorpoll-ui/Instant_API"
Documentation = "https://github.com/gacorpoll-ui/Instant_API#readme"
Repository = "https://github.com/gacorpoll-ui/Instant_API"
Issues = "https://github.com/gacorpoll-ui/Instant_API/issues"

[project.scripts]
instantapi = "instantapi.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
